--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <header>
+    <body>
         <img src="imgs/logo bibi.jpeg" alt="Logo da Loja">
         <h1>Chica Moedas Sports</h1>
         <nav>
@@ -18,7 +18,7 @@
                 <li><a href="esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
-    </header>
+    </body>
     <main>
         <section class="info-esporte">
             <h2>História do Futebol</h2>
