--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <body>
+    <header>
         <img src="imgs/logo bibi.jpeg" alt="Logo da Loja">
         <h1>Chica Moedas Sports</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Página Principal</a></li>
+               <li><a href="index.html">Página principal</a></li>
                 <li><a href="esporte/basquete/index.html">Basquete</a></li>
                 <li><a href="esporte/futebol/index.html">Futebol</a></li>
                 <li><a href="esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
-    </body>
+    </header>
     <main>
         <section class="info-esporte">
             <h2>História do Futebol</h2>
