--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo bibi.jpeg" alt="Logo da Loja">
+        <img src="imgs/logo bibi.jpeg"  width="75">
         <h1>Chica Moedas Sports</h1>
         <nav>
             <ul>
