--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
         <section class="produtos-destaque">
             <h2>Produtos em Destaque</h2>
             <div class="produto">
+                <h2>Artigo de Basquete</h2>
                 <a href="esporte/basquete/index.html">
-                    <img src="imgs/bola.jpeg" alt="Produto de Basquete">
+                    <img src="imgs/bola.jpeg" width="75">
                 </a>
             </div>
             <div class="produto">
+                <h2>Artigo de Futebol</h2>
                 <a href="esporte/futebol/index.html">
-                    <img src="imgs/chuteira.jpeg" alt="Produto de Futebol">
+                    <img src="imgs/chuteira.jpeg" width="75">
                 </a>
             </div>
             <div class="produto">
+                <h2>Artigo de Tênis</h2>
                 <a href="esporte/tênis/index.html">
-                    <img src="imgs/raquete.jpeg" alt="Produto de Tênis">
+                    <img src="imgs/raquete.jpeg" width="75">
                 </a>
             </div>
         </section>
         <section class="imagens-loja">
             <h2>Nosso Ambiente</h2>
-            <img src="imgs/fotor-ai-202408159547.jpg" alt="Imagem da Loja 1">
-            <img src="imgs/loja2 (1).jpeg" alt="Imagem da Loja 2">
+            <img src="imgs/fotor-ai-202408159547.jpg" width="75">
+            <img src="imgs/loja2 (1).jpeg" width="75">
         </section>
         <section class="descricao-servicos">
             <h2>Sobre Nós</h2>
