--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo bibi.jpeg" alt="Logo da Loja">
+        <img src="imgs/logo bibi.jpeg" width="250"  >
         <h1>Chica Moedas Sports</h1>
         <nav>
             <ul>
