--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -24,9 +24,16 @@
             <h2>História do Futebol</h2>
             <p>A história do futebol não é tão antiga, tendo o esporte surgido como o conhecemos hoje na Inglaterra em meados do século XIX. A fundação da Football Association, em 1863, é considerada o marco que deu origem ao esporte. Inicialmente, o futebol era um esporte ligado às elites, mas se popularizou entre as classes trabalhadoras. Espalhou-se pelo planeta e hoje é o esporte mais popular do mundo.</p>
             <p>No Brasil, a modalidade chegou em 1894 por meio do filho de escocês Charles Miller, que trouxe uma bola e outros instrumentos para a prática do futebol no Brasil. O sucesso do futebol deu origem à FIFA, que rege o futebol internacionalmente e desenvolveu a Copa do Mundo, tendo o Brasil como vencedor cinco vezes.</p>
-            <img src="esporte/futebol/index.html" alt="História do Futebol">
+            <img src="imgs/fut.jpeg" width="300"">
             <a href="https://www.todamateria.com.br/historia-do-futebol/" target="_blank">Saiba mais</a>
         </section>
+        <body>
+            <h2>Principal Atleta</h2>
+            <img src="imgs/cr7.jpeg" width="300"
+            <p> O jogador <strong>Cristiano Rpnaldo</strong> é um futebolista português que atua como ponta-esquerda ou avançado.</p>
+            <p>Atualmente joga pelo Al-Nassr da Arábia Saudita, onde venceu a Liga dos Campeões Árabes de 2023. Capitão pela Seleção Portuguesa, onde conquistou de forma inédita a Eurocopa de 2016. </p>
+            
+        </body>
         <section class="produtos-disponiveis">
             <h2>Produtos de Futebol</h2>
             <div class="produto">
@@ -51,6 +58,7 @@
                 <p>Tamanhos disponíveis: U </p>
             </div>
         </section>
+        </body>
     </main>
 </body>
 </html>
