--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="imgs/logo bibi.jpeg" width="500"  >
+        <img src="/imgs/logo bibi.jpeg" width="500"  >
         <h1>Chica Moedas Sports</h1>
         <nav>
             <ul>
@@ -24,34 +24,40 @@
             <h2>História do Futebol</h2>
             <p>A história do futebol não é tão antiga, tendo o esporte surgido como o conhecemos hoje na Inglaterra em meados do século XIX. A fundação da Football Association, em 1863, é considerada o marco que deu origem ao esporte. Inicialmente, o futebol era um esporte ligado às elites, mas se popularizou entre as classes trabalhadoras. Espalhou-se pelo planeta e hoje é o esporte mais popular do mundo.</p>
             <p>No Brasil, a modalidade chegou em 1894 por meio do filho de escocês Charles Miller, que trouxe uma bola e outros instrumentos para a prática do futebol no Brasil. O sucesso do futebol deu origem à FIFA, que rege o futebol internacionalmente e desenvolveu a Copa do Mundo, tendo o Brasil como vencedor cinco vezes.</p>
-            <img src="imgs/fut.jpeg" width="300"">
+            <img src="/imgs/fut.jpeg" width="300"">
             <a href="https://www.todamateria.com.br/historia-do-futebol/" target="_blank">Saiba mais</a>
         </section>
         <body>
             <h2>Principal Atleta</h2>
-            <img src="imgs/cr7.jpeg" width="300"
+            <img src="/imgs/cr7.jpeg" width="300"
             <p> O jogador <strong>Cristiano Rpnaldo</strong> é um futebolista português que atua como ponta-esquerda ou avançado.</p>
             <p>Atualmente joga pelo Al-Nassr da Arábia Saudita, onde venceu a Liga dos Campeões Árabes de 2023. Capitão pela Seleção Portuguesa, onde conquistou de forma inédita a Eurocopa de 2016. </p>
-            
+
+        </body>
+        <body>
+            <h2>Campeonato</h2>
+            <img src="/imgs/Logo_UEFA_Champions_League.jpeg" width="300"
+            <p><strong>Liga dos Campeões da UEFA</strong></p>
+            <p>A Liga dos Campeões da UEFA (em inglês: UEFA Champions League) é uma competição anual de futebol em nível continental, organizada pela União das Associações Europeias de Futebol (UEFA) e disputada por clubes da Europa. É um dos torneios mais prestigiados do mundo e a competição de clubes mais prestigiada no futebol europeu, disputada pelas equipes mais bem classificadas nas respectivas ligas nacionais na temporada anterior, sendo o número de vagas atribuído consoante o coeficiente da UEFA. </p>
         </body>
         <section class="produtos-disponiveis">
             <h2>Produtos de Futebol</h2>
             <div class="produto">
-                <img src="imgs/chuteira.jpeg" alt="Chuteira Nike Zoom Vapor 16 Elite Campo Blueprint">
+                <img src="/imgs/chuteira.jpeg" width="300">
                 <h3>Chuteira Nike Zoom Vapor 16 Elite Campo Blueprint</h3>
                 <p>Preço: R$ 4999,99</p>
                 <p>Descrição: Obcecado por velocidade? Projetamos a unidade Air Zoom no Vapor 16 Elite de acordo com as especificações exatas dos atletas campeões. Ela oferece a sensação propulsiva que você precisa para romper a linha de fundo. O resultado é a Mercurial mais responsiva que já fizemos, porque você exige grandeza de si mesmo e do seu calçado.</p>
                 <p>Tamanhos disponíveis: 39, 40, 41, 42, 43 e 44</p>
             </div>
             <div class="produto">
-                <img src="imgs/Camisa.jpeg" alt="Camisa Real Madrid Home 23/24">
+                <img src="/imgs/Camisa.jpeg" width="300">
                 <h3>Camisa Real Madrid Home 23/24 s/n° Torcedor Adidas Masculina</h3>
                 <p>Preço: R$ 399,99</p>
                 <p>Descrição: O futuro é brilhante com a Camisa Real Madrid Home 23/24 s/n° Torcedor Adidas Masculina! Homenageando os uniformes mais antigos da equipe.</p>
                 <p>Tamanhos disponíveis: P, M, G e GG</p>
             </div>
             <div class="produto">
-                <img src="imgs/bolafut.jpeg" alt="Bola de Futebol de Campo adidas Al Rihla Copa do Mundo 2022 Training">
+                <img src="/imgs/bolafut.jpeg" width="300">
                 <h3>Bola de Futebol de Campo adidas Al Rihla Copa do Mundo 2022 Training</h3>
                 <p>Preço: R$ 899,99</p>
                 <p>Descrição:O Futebol aproxima corações. A bola é só o começo. O resto da sua jornada no futebol ainda vai ser escrita. As cores trazem a emoção, as equipes, os jogos e o mundo. Rumo ao CATAR 2022.</p>
