--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -29,7 +29,7 @@
         </section>
         <body>
             <h2>Principal Atleta</h2>
-            <img src="/imgs/cr7.jpeg" width="300"
+            <img src="/imgs/CR7,jpeg.jpg" width="300"
             <p> O jogador <strong>Cristiano Rpnaldo</strong> é um futebolista português que atua como ponta-esquerda ou avançado.</p>
             <p>Atualmente joga pelo Al-Nassr da Arábia Saudita, onde venceu a Liga dos Campeões Árabes de 2023. Capitão pela Seleção Portuguesa, onde conquistou de forma inédita a Eurocopa de 2016. </p>
 
