--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -31,7 +31,7 @@
         <body>
             <h2>Principal Atleta</h2>
             <img src="/imgs/Cris.jpeg" width="300"
-
+            <h2>CR7</h2>
             <p> O jogador <strong>Cristiano Rpnaldo</strong> é um futebolista português que atua como ponta-esquerda ou avançado.</p>
             <p>Atualmente joga pelo Al-Nassr da Arábia Saudita, onde venceu a Liga dos Campeões Árabes de 2023. Capitão pela Seleção Portuguesa, onde conquistou de forma inédita a Eurocopa de 2016. </p>
 
@@ -39,8 +39,7 @@
         <body>
             <h2>Campeonato</h2>
             <img src="/imgs/Logo_UEFA_Champions_League.jpeg" width="300"
-            
-            <p><strong>Liga dos Campeões da UEFA</strong></p>
+            <h2>Liga dos Campeões da UEFA</h2>
             <p>A Liga dos Campeões da UEFA (em inglês: UEFA Champions League) é uma competição anual de futebol em nível continental, organizada pela União das Associações Europeias de Futebol (UEFA) e disputada por clubes da Europa. É um dos torneios mais prestigiados do mundo e a competição de clubes mais prestigiada no futebol europeu, disputada pelas equipes mais bem classificadas nas respectivas ligas nacionais na temporada anterior, sendo o número de vagas atribuído consoante o coeficiente da UEFA. </p>
         </body>
         <section class="produtos-disponiveis">
