--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <img src="../esporte/imgs/logo bibi.jpeg" alt="Logo da Loja Chica Moedas Sports">
-        <h1>Chica Moedas Sports</h1>
+        <img src="/imgs/logo bibi.jpeg" alt="Logo da Loja Chica Moedas Sports">
+        <h1>Chica Moedas Sports - Basquete</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Página Principal</a></li>
-                <li><a href="index.html">Basquete</a></li>
-                <li><a href="../futebol/index.html">Futebol</a></li>
-                <li><a href="../tenis/index.html">Tênis</a></li>
+                <li><a href="index.html">Página Principal</a></li>
+                <li><a href="esporte/basquete/index.html">Basquete</a></li>
+                <li><a href="esporte/futebol/index.html">Futebol</a></li>
+                <li><a href="esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
     </header>
@@ -32,24 +32,46 @@
             <p>A instituição responsável pela organização e regulamentação do basquete no mundo é a FIBA, criada em junho de 1932, com sede na cidade de Mies, na Suíça.</p>
             <p>Nos Estados Unidos, as quadras de basquete se tornaram um dos principais cenários da luta da comunidade negra em prol de direitos e igualdade. Historicamente, vários atletas negros se tornaram grandes nomes e protagonistas do esporte, como Kareem Abdul-Jabbar, Bill Russell, Wilt Chamberlain, Magic Johnson, Kobe Bryant, LeBron James e Michael Jordan, este último considerado o maior da história.</p>
             <p>O basquete estadunidense consolidou uma forte conexão com a cultura popular, especificamente com o hip-hop e o R&B. Essa relação foi tema de várias obras cinematográficas como Space Jam, Homens Brancos Não Sabem Enterrar e Coach Carter.</p>
-            <img src="../esporte/imgs/BASHIS.JPEG" alt="História do Basquete">
+            <img src="/imgs/BASHIS.JPEG" width="300">
+            <p>         </p>
             <a href="https://www.clickesportivo.com.br/basquete/a-historia-do-basquete" target="_blank">Saiba mais</a>
         </section>
+        <body>
+            <h2>Principal Atleta</h2>
+            <img src="/imgs/jogador basquete.jpeg" width="300"
+            <p>       </p>
+            <h2>LeBron James</h2>
+            <p><strong>Raymone James</strong>(Akron, 30 de dezembro de 1984) é um basquetebolista norte-americano que atua como ala pelo Los Angeles Lakers.</p>
+        </body>
+        <body>
+            <h2>Campeonato</h2>
+            <img src="/imgs/nba.png" width="300"
+            <p>      </p>
+            <h3>NBA Liga esportiva</h3>
+            <p>A National Basketball Association é a principal liga de basquetebol profissional da América do Norte. Com 30 franquias, a NBA também é considerada a principal liga de basquete do mundo</p>
+        </body>
         <section class="produtos-disponiveis">
             <h2>Produtos do Basquete</h2>
             <div class="produto">
-                <img src="../esporte/imgs/bola.jpeg" alt="Bola de Basquete Classic Retro Wct Fitness">
+                <img src="/imgs/bola.jpeg" width="300">
                 <h3>Bola De Basquete Classic Retro Wct Fitness</h3>
-                <p>Preço: R$ 1099,99</p>
-                <p>Descrição: A Bola de Basquete Modelo Classic Retro é uma homenagem à tradição do esporte, combinando estilo atemporal com desempenho excepcional. Com sua construção em couro microfibra de alta qualidade e forro de borracha durável, esta bola oferece uma sensação autêntica e resistência aprimorada.</p>
-                <p>Tamanhos disponíveis: 76 cm e peso de 650 g</p>
+                <p><strong>Preço: </strong>R$ 1099,99</p>
+                <p><strong>Descrição: </strong>A Bola de Basquete Modelo Classic Retro é uma homenagem à tradição do esporte, combinando estilo atemporal com desempenho excepcional. Com sua construção em couro microfibra de alta qualidade e forro de borracha durável, esta bola oferece uma sensação autêntica e resistência aprimorada.</p>
+                <p><strong>Tamanhos disponíveis: </strong>76 cm e peso de 650 g</p>
             </div>
             <div class="produto">
-                <img src="../esporte/imgs/bas.jpeg" alt="Tênis de Basquete Dunk Adrenaline">
+                <img src="/imgs/bas.jpeg" width="300">
                 <h3>Tênis De Basquete Dunk Adrenaline</h3>
-                <p>Preço: R$ 799,99</p>
-                <p>Descrição: Os Tênis Masculinos de Basquete são pensados para enfrentar qualquer desafio em quadra junto com você.</p>
-                <p>Tamanhos disponíveis: 39, 40, 41, 42, 43 e 44</p>
+                <p><strong>Preço: </strong>R$ 799,99</p>
+                <p><strong>Descrição: </strong>Os Tênis Masculinos de Basquete são pensados para enfrentar qualquer desafio em quadra junto com você.</p>
+                <p><strong>Tamanhos disponíveis: </strong>39, 40, 41, 42, 43 e 44</p>
+            </div>
+            <div class="produto">
+                <img src="/imgs/camisa basquete.jpeg" width="300"
+                <h3>Camisa de Basquete Los Angeles Lakers - 23 LeBron James</h3>
+                <p><strong>Preço: </strong>R$ 499,99</p>
+                <p><strong>Descrição: </strong>Nossas camisas de basquete são adequadas para diversas ocasiões e a nossa loja oferece uma ampla seleção das melhores opções disponíveis no mercado. Adquirir uma de nossas regatas de basquete pode proporcionar um toque especial ao seu visual, adicionando um estilo único e diferenciado.</p>
+                <p><strong>Tamanhos disponíveis:</strong> P M G GG.</p>
             </div>
         </section>
     </main>
