--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="/imgs/logo bibi.jpeg" width="500"  >
-        <h1>Chica Moedas Sports</h1>
+        <h1>Chica Moedas Sports - Futebol</h1>
         <nav>
             <ul>
                <li><a href="index.html">Página principal</a></li>
@@ -49,23 +49,23 @@
             <div class="produto">
                 <img src="/imgs/chuteira.jpeg" width="300">
                 <h3>Chuteira Nike Zoom Vapor 16 Elite Campo Blueprint</h3>
-                <p>Preço: R$ 4999,99</p>
-                <p>Descrição: Obcecado por velocidade? Projetamos a unidade Air Zoom no Vapor 16 Elite de acordo com as especificações exatas dos atletas campeões. Ela oferece a sensação propulsiva que você precisa para romper a linha de fundo. O resultado é a Mercurial mais responsiva que já fizemos, porque você exige grandeza de si mesmo e do seu calçado.</p>
-                <p>Tamanhos disponíveis: 39, 40, 41, 42, 43 e 44</p>
+                <p><strong>Preço: </strong>R$ 4999,99</p>
+                <p><strong>Descrição: </strong>Obcecado por velocidade? Projetamos a unidade Air Zoom no Vapor 16 Elite de acordo com as especificações exatas dos atletas campeões. Ela oferece a sensação propulsiva que você precisa para romper a linha de fundo. O resultado é a Mercurial mais responsiva que já fizemos, porque você exige grandeza de si mesmo e do seu calçado.</p>
+                <p><strong>Tamanhos disponíveis:</strong> 39, 40, 41, 42, 43 e 44</p>
             </div>
             <div class="produto">
                 <img src="/imgs/Camisa.jpeg" width="300">
                 <h3>Camisa Real Madrid Home 23/24 s/n° Torcedor Adidas Masculina</h3>
-                <p>Preço: R$ 399,99</p>
-                <p>Descrição: O futuro é brilhante com a Camisa Real Madrid Home 23/24 s/n° Torcedor Adidas Masculina! Homenageando os uniformes mais antigos da equipe.</p>
-                <p>Tamanhos disponíveis: P, M, G e GG</p>
+                <p><strong>Preço: </strong>R$ 399,99</p>
+                <p><strong>Descrição: </strong>O futuro é brilhante com a Camisa Real Madrid Home 23/24 s/n° Torcedor Adidas Masculina! Homenageando os uniformes mais antigos da equipe.</p>
+                <p><strong>Tamanhos disponíveis:</strong> P, M, G e GG</p>
             </div>
             <div class="produto">
                 <img src="/imgs/bolafut.jpeg" width="300">
                 <h3>Bola de Futebol de Campo adidas Al Rihla Copa do Mundo 2022 Training</h3>
-                <p>Preço: R$ 899,99</p>
-                <p>Descrição:O Futebol aproxima corações. A bola é só o começo. O resto da sua jornada no futebol ainda vai ser escrita. As cores trazem a emoção, as equipes, os jogos e o mundo. Rumo ao CATAR 2022.</p>
-                <p>Tamanhos disponíveis: U </p>
+                <p><strong>Preço: </strong>R$ 899,99</p>
+                <p><strong>Descrição: </strong>O Futebol aproxima corações. A bola é só o começo. O resto da sua jornada no futebol ainda vai ser escrita. As cores trazem a emoção, as equipes, os jogos e o mundo. Rumo ao CATAR 2022.</p>
+                <p><strong>Tamanhos disponíveis:</strong> U </p>
             </div>
         </section>
         </body>
