--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <img src="/imgs/logo bibi.jpeg" alt="Logo da Loja Chica Moedas Sports">
+        <img src="/imgs/logo bibi.jpeg" width="300">
         <h1>Chica Moedas Sports - Basquete</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Página Principal</a></li>
-                <li><a href="esporte/basquete/index.html">Basquete</a></li>
-                <li><a href="esporte/futebol/index.html">Futebol</a></li>
-                <li><a href="esporte/tênis/index.html">Tênis</a></li>
+                <li><a href="/index.html">Página Principal</a></li>
+                <li><a href="/esporte/basquete/index.html">Basquete</a></li>
+                <li><a href="/esporte/futebol/index.html">Futebol</a></li>
+                <li><a href="/esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
     </header>
@@ -40,7 +40,7 @@
             <h2>Principal Atleta</h2>
             <img src="/imgs/jogador basquete.jpeg" width="300"
             <p>       </p>
-            <h2>LeBron James</h2>
+            <h3>LeBron James</h3>
             <p><strong>Raymone James</strong>(Akron, 30 de dezembro de 1984) é um basquetebolista norte-americano que atua como ala pelo Los Angeles Lakers.</p>
         </body>
         <body>
@@ -68,6 +68,9 @@
             </div>
             <div class="produto">
                 <img src="/imgs/camisa basquete.jpeg" width="300"
+                <p>     </p>
+                <p>       </p>
+                
                 <h3>Camisa de Basquete Los Angeles Lakers - 23 LeBron James</h3>
                 <p><strong>Preço: </strong>R$ 499,99</p>
                 <p><strong>Descrição: </strong>Nossas camisas de basquete são adequadas para diversas ocasiões e a nossa loja oferece uma ampla seleção das melhores opções disponíveis no mercado. Adquirir uma de nossas regatas de basquete pode proporcionar um toque especial ao seu visual, adicionando um estilo único e diferenciado.</p>
