--- a/esporte/tênis/index.html
+++ b/esporte/tênis/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <img src="../esporte/imgs/logo bibi.jpeg" alt="Logo da Loja Chica Moedas Sports">
-        <h1>Chica Moedas Sports</h1>
+        <img src="/imgs/logo bibi.jpeg" width="300">
+        <h1>Chica Moedas Sports - Tênis</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Página Principal</a></li>
-                <li><a href="../basquete/index.html">Basquete</a></li>
-                <li><a href="../futebol/index.html">Futebol</a></li>
-                <li><a href="index.html">Tênis</a></li>
+                <li><a href="../esporte/basquete/index.html">Basquete</a></li>
+                <li><a href="../esporte/futebol/index.html">Futebol</a></li>
+                <li><a href="esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
     </header>
@@ -24,20 +24,21 @@
             <h2>História do Tênis</h2>
             <p>A origem do tênis está ligada a um jogo da França do século XII chamado “Jeu de Paume”, que pode ser traduzido como jogo de palma da mão. A atividade consistia em rebater uma bola com a mão contra um muro.</p>
             <p>Entretanto, ao praticar esse jogo durante muito tempo, os jogadores ficavam com as mãos inchadas e as unhas quebradiças. Assim, para proteger as mãos dos jogadores, passou-se a usar luvas e, alguns anos depois, surgiram as raquetes.</p>
-            <img src="../esporte/imgs/ttt.jpeg" alt="História do Tênis">
+            <img src="/imgs/ttt.jpeg" width="300">
+            <p>         </p>
             <a href="https://www.todamateria.com.br/tenis/" target="_blank">Saiba mais</a>
         </section>
         <section class="produtos-disponiveis">
             <h2>Produtos de Tênis</h2>
             <div class="produto">
-                <img src="../esporte/imgs/raquete.jpeg" alt="Raquete de Tênis">
+                <img src="/imgs/raquete.jpeg" width="300">
                 <h3>Raquete de Tênis Babolat</h3>
                 <p>Preço: R$ 2999,99</p>
                 <p>Descrição: Com sua combinação "melhor da classe" de velocidade, rotação e potência, a Pure Aero 2023 é uma das raquetes mais populares e versáteis já feitas na história do tênis.</p>
                 <p>Peso: 300g</p>
             </div>
             <div class="produto">
-                <img src="../esporte/imgs/bolate.jpeg" alt="Bola de Tênis Head Pro">
+                <img src="/imgs/bolate (1).jpeg" width="300">
                 <h3>Bola de Tênis Head Pro</h3>
                 <p>Preço: R$ 599,99</p>
                 <p>Descrição: A Bola de Tênis Head Pro é pressurizada para melhor desempenho e durabilidade, possui costuras de alta qualidade, adequada para quaisquer tipos de quadra e é a escolha dos tops da ATP, como Novak Djokovic e Andy Murray.</p>
