--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -12,10 +12,10 @@
         <h1>Chica Moedas Sports - Futebol</h1>
         <nav>
             <ul>
-               <li><a href="index.html">Página principal</a></li>
-                <li><a href="esporte/basquete/index.html">Basquete</a></li>
-                <li><a href="esporte/futebol/index.html">Futebol</a></li>
-                <li><a href="esporte/tênis/index.html">Tênis</a></li>
+               <li><a href="/index.html">Página principal</a></li>
+                <li><a href="/esporte/basquete/index.html">Basquete</a></li>
+                <li><a href="/esporte/futebol/index.html">Futebol</a></li>
+                <li><a href="/esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
     </header>
