--- a/esporte/tênis/index.html
+++ b/esporte/tênis/index.html
@@ -12,9 +12,9 @@
         <h1>Chica Moedas Sports - Tênis</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Página Principal</a></li>
-                <li><a href="../esporte/basquete/index.html">Basquete</a></li>
-                <li><a href="../esporte/futebol/index.html">Futebol</a></li>
+                <li><a href="/index.html">Página Principal</a></li>
+                <li><a href="/esporte/basquete/index.html">Basquete</a></li>
+                <li><a href="/esporte/futebol/index.html">Futebol</a></li>
                 <li><a href="esporte/tênis/index.html">Tênis</a></li>
             </ul>
         </nav>
