--- a/esporte/tênis/index.html
+++ b/esporte/tênis/index.html
@@ -28,21 +28,43 @@
             <p>         </p>
             <a href="https://www.todamateria.com.br/tenis/" target="_blank">Saiba mais</a>
         </section>
+        <body>
+            <h2>Principal Atleta</h2>
+            <img src="/imgs/tenista.jpeg" width="300">
+            <p>    </p>
+            <h3>Roger Federer</h3>
+            <p><strong>Roger Federer</strong> nasceu em 1981, na Suíça e reside atualmente nos Emirados Árabes Unidos, sendo jogador de destaque atualmente, é o numero 2 no ranking mundial. Ele se tornou jogador profissional de tênis em 1998, e com os prêmios já acumula US$ 88.611.538 em sua brilhante carreira, com 82 títulos vencidos.</p>
+        </body>
+        <body>
+            <h2>Campeonato</h2>
+            <img src="imgs/open.jpg" width="300">
+            <p>      </p>
+            <h3>Western & Southern Open</h3>
+            <p>O torneio de tênis de Cincinnati compreende os eventos profissionais de tênis que acontecem ou aconteceram em Cincinnati, nos Estados Unidos. No calendário de elite, é combinado masculino e feminino, durante a era aberta, entre 1970 e 1973, e a partir de 2012. </p>
+        </body>
         <section class="produtos-disponiveis">
             <h2>Produtos de Tênis</h2>
             <div class="produto">
                 <img src="/imgs/raquete.jpeg" width="300">
                 <h3>Raquete de Tênis Babolat</h3>
-                <p>Preço: R$ 2999,99</p>
-                <p>Descrição: Com sua combinação "melhor da classe" de velocidade, rotação e potência, a Pure Aero 2023 é uma das raquetes mais populares e versáteis já feitas na história do tênis.</p>
-                <p>Peso: 300g</p>
+                <p>><strong>Preço: </strong>R$ 2999,99</p>
+                <p><strong>Descrição: </strong>Com sua combinação "melhor da classe" de velocidade, rotação e potência, a Pure Aero 2023 é uma das raquetes mais populares e versáteis já feitas na história do tênis.</p>
+                <p><strong>Peso: </strong>300g</p>
             </div>
             <div class="produto">
                 <img src="/imgs/bolate (1).jpeg" width="300">
                 <h3>Bola de Tênis Head Pro</h3>
-                <p>Preço: R$ 599,99</p>
-                <p>Descrição: A Bola de Tênis Head Pro é pressurizada para melhor desempenho e durabilidade, possui costuras de alta qualidade, adequada para quaisquer tipos de quadra e é a escolha dos tops da ATP, como Novak Djokovic e Andy Murray.</p>
+                <p><strong>Preço: </strong>R$ 599,99</p>
+                <p><strong>Descrição: </strong>A Bola de Tênis Head Pro é pressurizada para melhor desempenho e durabilidade, possui costuras de alta qualidade, adequada para quaisquer tipos de quadra e é a escolha dos tops da ATP, como Novak Djokovic e Andy Murray.</p>
             </div>
+            <div class=""produto">
+                <img src="/imgs/camisa tt.jpeg" width="300">
+                <h3>Camiseta Polo de Tennis Masculina Mizuno Release Shadow</h3>
+                <p><strong>Preço: </strong>R$ 299,99</p>
+                <p><strong>Descrição: </strong>Tecido leve e elástico de desempenho Estampa gráfica sazonal na frente Inserção Dryaeroflow nas costas</p>
+                <p><strong>Tamanhos disponíveis:</strong> P M G GG </p>
+            </div>
+           
         </section>
     </main>
 </body>
