--- a/esporte/tênis/index.html
+++ b/esporte/tênis/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/imgs/logo bibi.jpeg" width="300">
+        <img src="/imgs/logo bibi.jpeg" width="400">
         <h1>Chica Moedas Sports - Tênis</h1>
         <nav>
             <ul>
@@ -37,7 +37,7 @@
         </body>
         <body>
             <h2>Campeonato</h2>
-            <img src="imgs/open.jpg" width="300">
+            <img src="/imgs/open.jpg" width="300">
             <p>      </p>
             <h3>Western & Southern Open</h3>
             <p>O torneio de tênis de Cincinnati compreende os eventos profissionais de tênis que acontecem ou aconteceram em Cincinnati, nos Estados Unidos. No calendário de elite, é combinado masculino e feminino, durante a era aberta, entre 1970 e 1973, e a partir de 2012. </p>
