--- a/esporte/tênis/index.html
+++ b/esporte/tênis/index.html
@@ -45,7 +45,7 @@
         <section class="produtos-disponiveis">
             <h2>Produtos de Tênis</h2>
             <div class="produto">
-                <img src="/imgs/raquete.jpeg" width="300">
+                <img src="/imgs/raquete.jpeg" width="240">
                 <h3>Raquete de Tênis Babolat</h3>
                 <p>><strong>Preço: </strong>R$ 2999,99</p>
                 <p><strong>Descrição: </strong>Com sua combinação "melhor da classe" de velocidade, rotação e potência, a Pure Aero 2023 é uma das raquetes mais populares e versáteis já feitas na história do tênis.</p>
@@ -56,6 +56,7 @@
                 <h3>Bola de Tênis Head Pro</h3>
                 <p><strong>Preço: </strong>R$ 599,99</p>
                 <p><strong>Descrição: </strong>A Bola de Tênis Head Pro é pressurizada para melhor desempenho e durabilidade, possui costuras de alta qualidade, adequada para quaisquer tipos de quadra e é a escolha dos tops da ATP, como Novak Djokovic e Andy Murray.</p>
+                <p><strong>Quantidade: </strong> 3 unidades</p>
             </div>
             <div class=""produto">
                 <img src="/imgs/camisa tt.jpeg" width="300">
