--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="descricao-servicos">
             <h2>Sobre Nós</h2>
-            <p>A Chica Moedas é uma loja especializada em artigos esportivos, oferecendo uma variedade de produtos relacionados ao mundo do esporte. Seu catálogo inclui itens como roupas esportivas, calçados, acessórios e equipamentos para diferentes modalidades esportivas.</p>
+            <p>A <strong>Chica Moedas Sports</strong> é uma loja especializada em artigos esportivos, oferecendo uma variedade de produtos relacionados ao mundo do esporte. Seu catálogo inclui itens como roupas esportivas, calçados, acessórios e equipamentos para diferentes modalidades esportivas.</p>
         </section>
         <section class="mapa">
             <h2>Nosso Endereço</h2>
