--- a/esporte/tênis/index.html
+++ b/esporte/tênis/index.html
@@ -47,7 +47,7 @@
             <div class="produto">
                 <img src="/imgs/raquete.jpeg" width="240">
                 <h3>Raquete de Tênis Babolat</h3>
-                <p>><strong>Preço: </strong>R$ 2999,99</p>
+                <p><strong>Preço: </strong>R$ 2999,99</p>
                 <p><strong>Descrição: </strong>Com sua combinação "melhor da classe" de velocidade, rotação e potência, a Pure Aero 2023 é uma das raquetes mais populares e versáteis já feitas na história do tênis.</p>
                 <p><strong>Peso: </strong>300g</p>
             </div>
